# ai-agents

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETENESS_REPORT.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile_ADK  Makefile_multi_agent  README.md  agent.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_multi_agent_reference.txt  requirements_updated.txt  vercel.json
agents/analytics/ANALYTICSGPT | Super Track/: agent.py  prompt.txt
agents/apis/APIUnifyMaster/: agent.py  prompt.txt
agents/apis/APIsImputOutputMapper/: agent.py  prompt.txt
agents/apis/HotmartAPIMaster/: agent.py
agents/apis/KiwifyAPIMaster/: agent.py
agents/apis/PaytAPIMaster/: agent.py
agents/apis/PerfectpayAPIMaster/: agent.py
agents/apis/PerfectpayAPIMaster/knowledge_base/: Webhooks.md
agents/copywriting/conversion_catalyst/: agent.py  prompt.txt
agents/copywriting/metaphor_architect/: agent.py  prompt.txt
agents/copywriting/neurohook_ultra/: agent.py  prompt.txt  tools.yaml
agents/copywriting/pain_detector/: agent.py  prompt.txt
agents/copywriting/paradigm_architect/: agent.py  prompt.txt  tools.yaml
agents/copywriting/retention_architect/: agent.py  prompt.txt
agents/knowledge_masters/DocRAGOptimizer/: agent.py  prompt.txt
config/: pyproject_multi_agent_reference.toml
docs/: CONVENTIONS.md  GUIA_RAPIDO.md  README_ADK.md  README_MULTI_AGENT.md
docs/adk_original/: ADK_LITELLM_GUIDE.md
docs/api/: reference.md
docs/architecture/: overview.md
docs/guides/: installation.md
docs/multi_agent_original/analise-manus-e-plano-de-acao/: Análise do Repositório Multi-Agent AI System.md  Análise dos Agentes Implementados no Repositório.md  Boas Práticas e Técnicas Avançadas para Criação de Agentes de IA Verticais.md  Criação Avançada de Agentes Verticais de IA: Técnicas, Estratégias e Boas Práticas.md  Diagnóstico Prático do Sistema Multi-Agent-AI-System.md  Estratégia para Implementação de Novos Agentes.md  Estratégias de Composição de Subagentes para Agentes Verticais de IA.md  Fontes de Pesquisa sobre Agentes de IA Verticais.md  Ideias Práticas para Aprimoramento e Expansão do Sistema Multi-Agent.md  Lista de Tarefas para Pesquisa sobre Agentes de IA Verticais.md  Mapeamento de Agentes e Subagentes Incompletos.md  Plano de Ação para Conclusão e Implementação de Agentes de IA.md  Priorização de Implementação de Agentes e Subagentes.md  Requisitos Faltantes para Conclusão de Agentes e Subagentes.md  Roteiro de Ação para Evolução do Sistema Multi-Agent-AI-System.md
docs/tutorials/: getting-started.md
examples/: README.md  knowledge_enhanced_agents_demo.py  knowledge_integration_demo.py  paradigm_architect_demo.py  paradigm_architect_demo_corrected.py
examples/adk_examples/: multi_model_examples.py
examples/advanced/: complete_sales_workflow.py
examples/basic/: api_integration_example.py  copywriting_example.py
knowledge/multi_agent_source/conversion_catalyst_knowledge/: summary.md
knowledge/multi_agent_source/metaphor_architect_knowledge/: Princípios de Mapeamento Isomórfico.md  Psicologia da Compreensão Analogica.md  Técnicas De Visualização.md  Tipologia de Estruturas Analógicas  summary.md
knowledge/multi_agent_source/pain_detector_knowledge/: summary
knowledge/multi_agent_source/retention_architect_knowledge/: summary
scripts/: advanced_fix_agents.py  agent_specific_tests.py  batch_migration.py  complete_migration_system.py  complete_professional_structure.py  complete_validation.py  completeness_checker.py  create_vertical_agents.py  create_vertical_agents_fixed.py  final_correction.py  fix_generator_compatibility.py  fix_migrated_agents.py  fundamental_correction.py  intelligent_cleanup.py  phase4_complete_correction.py  real_validation.py  unified_agent_generator.py  unified_cli.py  validate_agents.py
scripts/adk_reference/: agent.py  import_libraries.py  libraries_ready.py  mostrar_interface.py  setup.sh  test_imports.py  test_installation.py  verificar_reorganizacao.py
scripts/multi_agent_reference/: agent_generator.py  apply_ttl_to_keys.py  fixit.py  generate_embeddings_jsonl.py  monitor_redis.py  paradigm_architect_input.yaml  prepare_embeddings.sh  prepare_paradigm-architect_embeddings.sh  process_knowledge_files.sh  reset_knowledge_base.py  setup_paradigm-architect.sh  setup_retention_architect.sh  upload_to_supabase.py
shared/: redis_client.py  supabase_client.py
src/unified_sales_framework/: __init__.py
src/unified_sales_framework/agents/: __init__.py
src/unified_sales_framework/cli/: __init__.py
src/unified_sales_framework/core/: __init__.py  adk_integration.py  fixed_adk.py
src/unified_sales_framework/generation/: __init__.py
src/unified_sales_framework/knowledge/: __init__.py  knowledge_tools.py  unified_knowledge_service.py
src/unified_sales_framework/tools/: __init__.py
templates/unified_sales_agent_template/: README.md  agent.py  agent_simplified.py
templates/unified_sales_agent_template/config/: agent_config.yaml  deployment_config.yaml  knowledge_config.yaml  memory_config.yaml  subagents_config.yaml  tools_config.yaml
templates/yaml_examples/: traditional_agent.yaml  vertical_agent.yaml
tools/magenerator_reference/: cli.py  facade.py
tools/magenerator_reference/core/: config_writer.py  directory_builder.py  doc_generator.py  knowledge_processor.py  script_factory.py  template_loader.py
vertical_agents/analytics_specialist/vertical_knowledge/: domain_knowledge.md  knowledge_index.yaml
vertical_agents/api_integration_specialist/vertical_knowledge/: domain_knowledge.md  knowledge_index.yaml
vertical_agents/exemplo_vertical/: agent.py  config.yaml  prompt.txt  tools.yaml
vertical_agents/exemplo_vertical/knowledge/: domains.md
vertical_agents/knowledge_curator/vertical_knowledge/: domain_knowledge.md  knowledge_index.yaml
vertical_agents/metaphor_architect/vertical_knowledge/: domain_knowledge.md  knowledge_index.yaml
vertical_agents/neurohook_specialist/vertical_knowledge/: domain_knowledge.md  knowledge_index.yaml
(+188 files in other folders)
